# Calculator

./: CMakeLists.txt  LICENSE  README.md  addsub.c  addsub.h  args.c  args.h  calculate.c  calculate.h  debug.c  debug.h  element.c  element.h  element_utils.c  element_utils.h  expression.c  expression.h  free_main.c  free_main.h  main.c  number_utils.c  number_utils.h  parse_stdin.c  parse_stdin.h  string.c  string.h  string_struct.c  string_struct.h  structs_enums.h  tests.php  timesdiv.c  timesdiv.h  todo.txt
.github/workflows/: ccpp.yml
